@@ -1,3 +1,8 @@
+2002-08-05 Ales Hvezda   <ahvezda@geda.seul.org>
+
+ 	* noweb/i_basic.nw: Added a const to get rid of compiler warnings 
+	when compiling with --disable-nls
+
 2002-08-04 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* noweb/*: Added gettext patch by Alexandre P. Nunes.  Thank you for
